Thu May  8 17:31:02 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/Priority/run_test.pl:

          Forcing logging for diagnosing intermittent errors on specific builds.

Thu May  8 15:40:00 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * bin/dcps_tests.lst:

          Changed ManyToMany tcp tests to be 12 writers to 12 readers.

        * tests/DCPS/ManyToMany/Writer.h:
        * tests/DCPS/ManyToMany/Writer.cpp:
        * tests/DCPS/ManyToMany/publisher.cpp:

          Changed to report status when a sample timesout.

Thu May  8 15:10:50 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/ManyToMany/publisher.cpp:

          Logging the process id to verify the correct string that
          should be in the received sample.

        * tests/DCPS/ManyToMany/Writer.cpp:

          Added logging to track down error with multiple process ids being
          sent when there is only one publisher process.

Thu May  8 14:20:58 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/ManyToMany/run_test.pl:

          Setting a minimum total duration.

        * tests/DCPS/ManyToMany/DataReaderListener.cpp:
        * tests/DCPS/ManyToMany/Writer.cpp:

          Cleanup logging.

        * tests/DCPS/ManyToMany/subscriber.cpp:

          Polling readers at a set interval.

Thu May  8 13:50:29 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/ManyToMany/run_test.pl:

          Added printing out log files content when tests fail.

        * tests/DCPS/ManyToMany/DataReaderListener.cpp:
        * tests/DCPS/ManyToMany/Writer.cpp:
        * tests/DCPS/ManyToMany/publisher.cpp:
        * tests/DCPS/ManyToMany/subscriber.cpp:

          Cleaned up logging.

Wed May  7 21:06:22 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/ManyToMany/publisher.cpp:
        * tests/DCPS/ManyToMany/subscriber.cpp:

          Added timestamps for debugging.
